Add negative test cases. Extend DtoSample.departmentJson method to return JSON.