@@ -29,6 +29,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs '-Xshare:off'
 }
 
 jacocoTestReport {
